--- a/EBookStudio/Views/SettingView.xaml
+++ b/EBookStudio/Views/SettingView.xaml
@@ -4,11 +4,7 @@
              xmlns:vm="clr-namespace:EBookStudio.ViewModels"
              Width="320" Height="400">
 
-    <UserControl.DataContext>
-        <vm:SettingViewModel/>
-    </UserControl.DataContext>
-
-    <Border Background="White" CornerRadius="12" Padding="25">
+    <Border Background="White" CornerRadius="12" Padding="25" Margin="0,0,0,-19">
         <Border.Effect>
             <DropShadowEffect BlurRadius="20" Opacity="0.4"/>
         </Border.Effect>
